--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "compression": "^1.7.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "ssh2": "^1.15.0",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
@@ -30,6 +32,8 @@
     "vite": "^5.1.6",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "@types/ssh2": "^1.11.19",
+    "@types/ws": "^8.5.10"
   }
 }
