--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "nebula-ssh-client",
   "private": true,
   "version": "1.0.0",
+  "main": "electron/main.cjs",
   "type": "module",
+  "description": "A modern, secure, and modular SSH client.",
+  "author": "Nebula Team",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "start": "node server/index.js"
+    "start": "node server/index.js",
+    "electron:dev": "concurrently -k \"cross-env BROWSER=none npm run dev\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron:build": "npm run build && electron-builder"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -34,6 +39,35 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "@types/ssh2": "^1.11.19",
-    "@types/ws": "^8.5.10"
+    "@types/ws": "^8.5.10",
+    "electron": "^29.1.0",
+    "electron-builder": "^24.13.3",
+    "concurrently": "^8.2.2",
+    "wait-on": "^7.2.0",
+    "cross-env": "^7.0.3"
+  },
+  "build": {
+    "appId": "com.nebula.ssh",
+    "productName": "Nebula SSH",
+    "files": [
+      "dist/**/*",
+      "electron/**/*",
+      "server/**/*",
+      "package.json"
+    ],
+    "directories": {
+      "output": "release"
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "public/icon.ico"
+    },
+    "linux": {
+      "target": "AppImage",
+      "category": "Development"
+    },
+    "mac": {
+      "target": "dmg"
+    }
   }
 }
